--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 *src_gen*
 /trufflesqueak/de.hpi.swa.trufflesqueak/nbproject/private/
 /trufflesqueak/de.hpi.swa.trufflesqueak.test/nbproject/private/
+*.class
